--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="l-contact" id="contact">
                 <section class="contact">
                     <div>
-                        <img src="img/Hello.png" alt="Social media icons">
+                        <img src="img/hello.png" alt="Social media icons">
                     </div>
                     <div>
                         <h1>Say Hello to Me</h1>
