--- a/index.html
+++ b/index.html
@@ -14,43 +14,46 @@
         <div class="navbar-container">
             <div class="navbar">
                 <div class="logo">
-                	<a href="index.html">
-                    <img src="img/logo.svg" alt="Akachi's Logo"></a>
+                    <a href="#top">
+                        <img src="img/logo.svg" alt="Akachi's Logo"></a>
                 </div>
                 <nav class="navbar-menu">
                     <ul>
-                        <li><a  href="#skillset">Skillset</a></li>
-                        <li><a  href="#interest">Interests</a></li>
-                        <li><a  href="#contact">Contact</a></li>
+                        <li><a href="#skillset">Skillset</a></li>
+                        <li><a href="#interest">Interests</a></li>
+                        <li><a href="#contact">Contact</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
         <div class="wrapper">
-            <div class="l-intro">
-                <section class="intro">
-                    <img src="img/Akachi.png" class="logo" alt="Akachi Ogbonna">
-                    <h1><span>Hello! I’m ‘Kachi.</span><br> 
+            <div class="header" id="top">
+                <div class="l-intro">
+                    <section class="intro">
+                        <div class="img">
+                            <img src="img/Akachi.png" alt="Akachi Ogbonna"></div>
+                        <h1><span>Hello! I’m ‘Kachi.</span><br> 
 		   Design jedi in training. Born leader. Avid reader. Problem Solver. Superwoman. Unapologetic foodie. Happy child. Furiously curious.</h1>
-                </section>
+                    </section>
+                </div>
             </div>
             <div class="midsection">
                 <div class="l-skillset" id="skillset">
                     <section class="skillset">
-                        <div>
+                        <div class="img">
                             <img src="img/knownstuff.png" alt="stuff i know icons">
                         </div>
                         <div>
                             <h1>Stuff I know</h1>
-                            <p class="subtext">I started this journey October 2016. So far I’ve learnt a bit of Product design, Design thinking, Visual design and Front end development. I can work well with tools like Figma, Photoshop, Illustrator and I know how to use HTML5, CSS3 and JS to build sites. You can check out stuff I’ve done <a href="#">here</a>.</p>
+                            <p class="subtext">I started this journey October 2016. So far I’ve learnt a bit of Product design, Design thinking, Visual design and Front end development. I can work well with tools like Figma, Photoshop, Illustrator and I know how to use HTML5, CSS3 and JS to build sites. You can check out stuff I’ve done <a href="https://github.com/akachinonyerem">here</a>.</p>
                         </div>
                     </section>
                 </div>
             </div>
-			<div class="l-midsection">
-            <div class="l-interest" id="interest">
+            <div class="l-midsection">
+                <div class="l-interest" id="interest">
                     <section class="interest">
-                        <div>
+                        <div class="img">
                             <img src="img/likedstuff.png" alt="stuff i like icons">
                         </div>
                         <div>
@@ -59,26 +62,23 @@
                         </div>
                     </section>
                 </div>
-				</div>
-
+            </div>
             <div class="l-contact" id="contact">
                 <section class="contact">
-                    <div>
+                    <div class="img">
                         <img src="img/hello.png" alt="Social media icons">
                     </div>
                     <div>
                         <h1>Say Hello to Me</h1>
-                        <p class="subtext">Send me a <a href="">Mail</a> or <a href="">Tweet</a> at me. You can also see what i’ve been up to on <a href="">Instagram</a>, check out my <a href="">Behance</a> profile and stuff I’ve written on <a href="">Medium</a>.</p>
+                        <p class="subtext">Send me a <a href="mailto:akachinonyerem.o@gmail.com">Mail</a> or <a href="https://twitter.com/akachinonyerem_">Tweet</a> at me. You can also see what i’ve been up to on <a href="https://www.instagram.com/akachinonyerem_/">Instagram</a>, check out my <a href="https://www.behance.net/akachinonyerem_">Behance</a> profile and stuff I’ve written on <a href="https://medium.com/@akachinonyerem_">Medium</a>.</p>
                     </div>
                 </section>
             </div>
             <footer class="footer">
-            <p>© 2017 Made with Love & Music</p>
-        </footer>
+                <p>© 2017 Made with Love & Music</p>
+            </footer>
         </div>
-        
     </div>
-
-    </body>
+</body>
 
 </html>
