--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="description" content="Akachi Ogbonna's website">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+   <!--  <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script> -->
+	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
 </head>
 
 <body>
@@ -18,11 +22,14 @@
                         <img src="img/logo.svg" alt="Akachi's Logo"></a>
                 </div>
                 <nav class="navbar-menu">
-                    <ul>
+                    <ul class="active">
                         <li><a href="#skillset">Skillset</a></li>
                         <li><a href="#interest">Interests</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
+
+					<a class="toggle-nav" href="#">&#9776;</a> 
+
                 </nav>
             </div>
         </div>
