--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="l-intro">
                     <section class="intro">
                         <div class="img">
-                            <img src="img/Akachi.png" alt="Akachi Ogbonna"></div>
+                            <img src="img/Akachi.png" srcset="img/Akachi.png 1x, img/Akachi-2x.png 2x" alt="Akachi Ogbonna"></div>
                         <h1><span>Hello! I’m ‘Kachi.</span><br> 
 		   Design jedi in training. Born leader. Avid reader. Problem Solver. Superwoman. Unapologetic foodie. Happy child. Furiously curious.</h1>
                     </section>
@@ -64,7 +64,7 @@
                 <div class="l-skillset" id="skillset">
                     <section class="skillset">
                         <div class="img">
-                            <img src="img/knownstuff.png" alt="stuff i know icons">
+                            <img src="img/knownstuff.png" srcset=" img/knownstuff.png 1x, img/knownstuff-2x.png 2x" alt="stuff i know icons">
                         </div>
                         <div>
                             <h1>Stuff I know</h1>
@@ -77,7 +77,7 @@
                 <div class="l-interest" id="interest">
                     <section class="interest">
                         <div class="img">
-                            <img src="img/likedstuff.png" alt="stuff i like icons">
+                            <img src="img/likedstuff.png" srcset="img/likedstuff.png 1x, img/likedstuff-2x.png 2x" alt="stuff i like icons">
                         </div>
                         <div>
                             <h1>Stuff I Like</h1>
@@ -89,7 +89,7 @@
             <div class="l-contact" id="contact">
                 <section class="contact">
                     <div class="img">
-                        <img src="img/hello.png" alt="Social media icons">
+                        <img src="img/hello.png" srcset="img/hello.png 1x, img/hello-2x.png 2x" alt="Social media icons">
                     </div>
                     <div>
                         <h1>Say Hello to Me</h1>
